Update java_all_service.sh